--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FabricaSinapse_Live_Android_Introducao">
-        <activity android:name=".ResultActivity"></activity>
+        <activity android:name=".SendResultActivity"></activity>
+        <activity android:name=".ResultActivity" />
         <activity
             android:name=".DrawerActivity"
             android:label="@string/title_activity_drawer"
